chore(cleanup): remove / modify statements that had warnings